[gd_scene load_steps=28 format=2]

[ext_resource path="res://Actors/Projectile/Projectile.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/MagneticField.png" type="Texture" id=2]



[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 420, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 660, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 780, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 840, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 960, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 1020, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 1080, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 1140, 0, 60, 60 )

[sub_resource type="SpriteFrames" id=25]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 7.5

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 10 )

[sub_resource type="CircleShape2D" id=3]
radius = 8.5

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.5, 11 )

[node name="ProjectileBody" type="KinematicBody2D"]
show_behind_parent = true
collision_layer = 0
collision_mask = 7
script = ExtResource( 1 )

[node name="MagneticField" type="AnimatedSprite" parent="."]
frames = SubResource( 25 )
frame = 8
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 4 )
disabled = true

[node name="RayCasts" type="Node2D" parent="."]

[node name="Horizontals" type="Node2D" parent="RayCasts"]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts/Horizontals"]
position = Vector2( 6, 6 )
rotation = 0.872665
cast_to = Vector2( 6, 0 )
collision_mask = 7

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts/Horizontals"]
position = Vector2( 6, -6 )
rotation = -0.872665
cast_to = Vector2( 6, 0 )
collision_mask = 7

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts/Horizontals"]
position = Vector2( 8, 0 )
cast_to = Vector2( 6, 0 )
collision_mask = 7

[node name="Verticals" type="Node2D" parent="RayCasts"]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts/Verticals"]
position = Vector2( -5, 7 )
rotation = 2.18166
cast_to = Vector2( 6, 0 )
collision_mask = 7

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts/Verticals"]
position = Vector2( 5, 7 )
rotation = 0.872665
cast_to = Vector2( 6, 0 )
collision_mask = 7

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts/Verticals"]
position = Vector2( 4.76837e-07, 8 )
rotation = 1.5708
cast_to = Vector2( 6, 0 )
collision_mask = 7
[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_DetectionArea_body_entered"]
